fix logo on mobile view

--- a/app/styles/range.less
+++ b/app/styles/range.less
@@ -167,7 +167,7 @@
 
 .irs-min, .irs-max {
    color: #999;
-   font-size: 10px; line-height: 1.333;
+   font-size: 11px; line-height: 1.333;
    text-shadow: none;
    top: 0; padding: 1px 3px;
    background: rgba(0,0,0,0.1);
